excecao para objeto nao encontrado